# milling-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/models/: ciecierskij.model  kowalikw.model  sienkiewiczk-old.model
resources/paths/: fastmovement.k6  flathole.f12  flatraise.f12  last_body.k8  last_drill.k8  last_flattening.f12  last_handle.k8  last_handle_hole.k1  last_handle_hole.k8  last_refinement.k8  last_roughing.f16  mini-atom-center.k1  mini-atom-trajectories.k8  signature.k1  straightcut-diag.k32  straightcut.k32  t1.k16  t2.f12  t3.f12  t4.k16
resources/shaders/: CopyPosition.vert  DebugColor.frag  HeightmapTransform.frag  HeightmapTransform.vert  MVPTransformTexCoord.vert  SingleTexture.frag  SolidColor.frag
src/: Config.hpp.in
src/mill-gui/: AABB.hpp  BaseFlatteningPathGenerator.cpp  BaseFlatteningPathGenerator.hpp  BasicEffect.cpp  BasicEffect.hpp  BoundariesMillingTechnique.cpp  BoundariesMillingTechnique.hpp  BsplineBasisEvaluator.cpp  BsplineBasisEvaluator.hpp  BsplineCurve.hpp  BsplineEquidistantKnotGenerator.cpp  BsplineEquidistantKnotGenerator.hpp  BsplineNonVanishingCurveReparametrization.hpp  BsplineNonVanishingReparametrization.cpp  BsplineNonVanishingReparametrization.hpp  BsplineSurface.cpp  BsplineSurface.hpp  CadioModelLoader.cpp  CadioModelLoader.hpp  Common.cpp  Common.hpp  CommonBsplineSurfaces.cpp  CommonBsplineSurfaces.hpp  ContourMerger.cpp  ContourMerger.hpp  CurvePathGenerator.cpp  CurvePathGenerator.hpp  CurveSimplifier.hpp  CuttingToolController.cpp  CuttingToolController.hpp  CuttingToolGUI.cpp  CuttingToolGUI.hpp  CuttingToolModel.cpp  CuttingToolModel.hpp  CuttingToolParams.cpp  CuttingToolParams.hpp  DebugShapes.cpp  DebugShapes.hpp  DecalViewer.cpp  DecalViewer.hpp  (+87 more)
test/: BsplineBasisEvaluatorTests.cpp  BsplineEquidistantKnotGeneratorTests.cpp  BsplineSurfaceTests.cpp  CommonTest.cpp  GeometricIntersectionsTests.cpp  IBasisEvaluatorMock.hpp  IBsplineKnotGeneratorMock.hpp  LinearCombinationEvaluatorTests.cpp  PointQuadtreeTests.cpp
